--- a/samples/python/agents/birthday_planner_adk/birthday_planner/pyproject.toml
+++ b/samples/python/agents/birthday_planner_adk/birthday_planner/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
-name = "adk-auth-example"
+name = "adk-a2a-client-example"
 version = "0.1.0"
-description = "Calendar agent example"
+description = "Birthday planner agent example"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "a2a-sdk",
+    "a2a-sdk>=0.2.5",
     "click>=8.1.8",
     "dotenv>=0.9.9",
     "httpx>=0.28.1",
@@ -13,14 +13,10 @@ dependencies = [
     "google-adk>=1.0.0",
     "pydantic>=2.11.4",
     "python-dotenv>=1.1.0",
-    "uvicorn>=0.34.2",
 ]
 
 [tool.hatch.build.targets.wheel]
 packages = ["."]
-
-[tool.uv.sources]
-a2a-sdk = { workspace = true }
 
 [build-system]
 requires = ["hatchling"]
