--- a/samples/langgraph/pyproject.toml
+++ b/samples/langgraph/pyproject.toml
@@ -5,7 +5,7 @@ description = "Currency conversion agent example"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "a2a-sdk",
+    "a2a-sdk>=0.2.5",
     "click>=8.1.8",
     "dotenv>=0.9.9",
     "httpx>=0.28.1",
@@ -18,9 +18,6 @@ dependencies = [
 
 [tool.hatch.build.targets.wheel]
 packages = ["."]
-
-[tool.uv.sources]
-a2a-sdk = { workspace = true }
 
 [build-system]
 requires = ["hatchling"]
