--- a/samples/python/pyproject.toml
+++ b/samples/python/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "starlette>=0.46.1",
     "typing-extensions>=4.12.2",
     "uvicorn>=0.34.0",
+    "veo-google-adk-sample-agent",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -33,8 +34,12 @@ members = [
     "agents/semantickernel",
     "agents/mindsdb",
     "agents/ag2",
-    "agents/extended_agent_card_adk"
+    "agents/extended_agent_card_adk",
+    "agents/veo_video_gen_google_adk",
 ]
+
+[tool.uv.sources]
+veo-google-adk-sample-agent = { workspace = true }
 
 [build-system]
 requires = ["hatchling"]
