--- a/samples/a2a-adk-app/pyproject.toml
+++ b/samples/a2a-adk-app/pyproject.toml
@@ -10,8 +10,9 @@ dependencies = [
     "geopy>=2.4.1",
     "google-adk>=1.0.0",
     "gradio>=5.30.0",
-    "langchain-google-genai>=2.1.4",
+    "langchain-google-genai>=2.1.5",
     "langchain-mcp-adapters>=0.1.1",
+    "langchain-google-vertexai>=2.0.24",
     "langgraph>=0.4.5",
     "mcp>=1.9.0",
 ]
