--- a/samples/python/agents/langgraph/pyproject.toml
+++ b/samples/python/agents/langgraph/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "httpx>=0.28.1",
     "langchain-google-genai>=2.0.10",
     "langgraph>=0.3.18",
+    "langchain-openai >=0.1.0",
     "pydantic>=2.10.6",
     "python-dotenv>=1.1.0",
     "uvicorn>=0.34.2",
