working baseline of analytics example
ready for submission

--- a/samples/python/pyproject.toml
+++ b/samples/python/pyproject.toml
@@ -23,6 +23,7 @@ packages = ["common", "hosts"]
 [tool.uv.workspace]
 members = [
     "agents/crewai",
+    "agents/analytics",
     "agents/google_adk",
     "agents/langgraph",
     "agents/marvin",
