--- a/samples/python/agents/langgraph/pyproject.toml
+++ b/samples/python/agents/langgraph/pyproject.toml
@@ -5,7 +5,7 @@ description = "Sample LangGraph currency agent with A2A Protocol"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "a2a-samples",
+    "a2a-sdk>=0.2.5",
     "click>=8.1.8",
     "httpx>=0.28.1",
     "langchain-google-genai>=2.0.10",
@@ -16,9 +16,6 @@ dependencies = [
 
 [tool.hatch.build.targets.wheel]
 packages = ["."]
-
-[tool.uv.sources]
-a2a-samples = { workspace = true }
 
 [build-system]
 requires = ["hatchling"]
