--- a/samples/python/agents/langgraph/pyproject.toml
+++ b/samples/python/agents/langgraph/pyproject.toml
@@ -12,10 +12,11 @@ dependencies = [
     "langgraph>=0.3.18",
     "pydantic>=2.10.6",
     "python-dotenv>=1.1.0",
+    "uvicorn>=0.34.2",
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["."]
+packages = ["app"]
 
 [build-system]
 requires = ["hatchling"]
