--- a/samples/python/pyproject.toml
+++ b/samples/python/pyproject.toml
@@ -33,9 +33,9 @@ members = [
     "agents/llama_index_file_chat",
     "agents/semantickernel",
     "agents/mindsdb",
-    "agents/ag2",
     "agents/extended_agent_card_adk",
     "agents/veo_video_gen",
+    # "agents/ag2", # it can be added back as a member after https://github.com/ag2ai/ag2/pull/1881
 ]
 
 [tool.uv.sources]
