--- a/samples/python/agents/ag2/pyproject.toml
+++ b/samples/python/agents/ag2/pyproject.toml
@@ -8,5 +8,5 @@ dependencies = [
     "ag2>=0.9.2",
     "ag2[mcp, openai]>=0.9.2",
     "google-genai>=1.10.0",
-    "a2a-sdk>=0.2.6",  # it can be added back as a member after https://github.com/ag2ai/ag2/pull/1881
+    "a2a-sdk>=0.2.6",  # After https://github.com/ag2ai/ag2/pull/1881, this pyproject can be added back in as a member of samples/python/pyproject.toml
 ]
