--- a/samples/a2a4j-springboot-sample/server-hello-world/src/main/resources/application.yml
+++ b/samples/a2a4j-springboot-sample/server-hello-world/src/main/resources/application.yml
@@ -27,9 +27,9 @@ a2a:
     version: "1.0.0"
     url: "http://localhost:${server.port}/a2a/server"
     provider:
-      name: "A2AP Team"
-      url: "https://github.com/a2ap"
-    documentationUrl: "https://github.com/a2ap/a2a4j"
+      name: "A2A"
+      url: "https://github.com/google-a2a/a2a-samples"
+    documentationUrl: "https://google-a2a.github.io/A2A/"
     capabilities:
       streaming: true
       pushNotifications: false
