--- a/samples/a2a4j-springboot-sample/server-hello-world/pom.xml
+++ b/samples/a2a4j-springboot-sample/server-hello-world/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>com.google.a2a4j</groupId>
-        <artifactId>a2a4j-springboot-samples</artifactId>
+        <artifactId>a2a4j-springboot-sample</artifactId>
         <version>1.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
