Minor updates and cleanup

--- a/samples/python/pyproject.toml
+++ b/samples/python/pyproject.toml
@@ -5,6 +5,7 @@ description = "Agent2Agent samples"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "a2a-sample-client-cli",
     "a2a-sdk>=0.2.4",
     "httpx>=0.28.1",
     "httpx-sse>=0.4.0",
@@ -27,6 +28,7 @@ members = [
     "agents/google_adk",
     "agents/marvin",
     "hosts/cli",
+    "hosts/cli_auth",
     "hosts/extended_agent_card_cli",
     "hosts/multiagent",
     "agents/llama_index_file_chat",
@@ -39,6 +41,7 @@ members = [
 
 [tool.uv.sources]
 veo-video-sample-agent = { workspace = true }
+a2a-sample-client-cli = { workspace = true }
 
 [build-system]
 requires = ["hatchling"]
