feat: Add ag2 back in as a member

--- a/samples/python/pyproject.toml
+++ b/samples/python/pyproject.toml
@@ -37,7 +37,7 @@ members = [
     "agents/extended_agent_card_adk",
     "agents/veo_video_gen",
     "agents/dice_agent_grpc",
-    # "agents/ag2", # it can be added back as a member after https://github.com/ag2ai/ag2/pull/1881
+    "agents/ag2",
 ]
 
 [tool.uv.sources]
