feat: Move A2A example without framework
- Introduced a new example demonstrating the use of the A2A protocol without relying on any agent framework.
- Added configuration files for Ruff linter and project dependencies in `pyproject.toml`.
- Created a comprehensive README to guide users through setup, installation, and running the example.
- Implemented client and server components to facilitate A2A communication, including templates for agent interactions.
- Included necessary scripts and constants for seamless operation.

This commit enhances the project by providing a clear, standalone example of A2A usage, making it easier for developers to understand and implement the protocol.

--- a/samples/python/agents/a2a-mcp-without-framework/pyproject.toml
+++ b/samples/python/agents/a2a-mcp-without-framework/pyproject.toml
@@ -1,16 +1,16 @@
 [project]
 name = "no-llm-framework"
 version = "0.1.0"
-description = "Add your description here"
+description = "Use A2A without any agent framework"
 readme = "README.md"
 authors = [{ name = "prem", email = "prem.ch@ku.th" }]
 requires-python = ">=3.13"
 dependencies = [
-    "a2a-sdk>=0.2.6",
+    "a2a-sdk>=0.2.8",
     "asyncclick>=8.1.8",
     "colorama>=0.4.6",
     "fastmcp>=2.3.4",
-    "google-generativeai>=0.8.5",
+    "google-genai",
     "jinja2>=3.1.6",
     "rich>=14.0.0",
 ]
