Added Eliza chatbot to demonstrate universal authentication with the Agentic Profile

--- a/samples/js/package.json
+++ b/samples/js/package.json
@@ -11,10 +11,15 @@
   "scripts": {
     "a2a:cli": "npx tsx src/cli.ts",
     "agents:movie-agent": "npx tsx src/agents/movie-agent/index.ts",
-    "agents:coder": "npx tsx src/agents/coder/index.ts"
+    "agents:coder": "npx tsx src/agents/coder/index.ts",
+    "agents:eliza": "npx tsx src/agents/eliza/eliza-app.ts",
+    "agents:eliza:create-profile": "tsx src/agents/eliza/create-global-agentic-profile.ts",
+    "agents:eliza:authcli": "tsx src/agents/eliza/universal-auth-cli.ts"
   },
   "dependencies": {
     "@a2a-js/sdk": "^0.2.1",
+    "@agentic-profile/eliza": "^0.1.0",
+    "@agentic-profile/auth": "^0.6.0",
     "@genkit-ai/googleai": "^1.8.0",
     "@genkit-ai/vertexai": "^1.8.0",
     "@types/cors": "^2.8.17",
