Move Simple ADK Agent to adk_facts and google_adk agent to adk_expense_reimbursement

--- a/samples/python/pyproject.toml
+++ b/samples/python/pyproject.toml
@@ -24,7 +24,7 @@ packages = ["common", "hosts"]
 [tool.uv.workspace]
 members = [
     "agents/crewai",
-    "agents/google_adk",
+    "agents/adk_expense_reimbursement",
     "agents/marvin",
     "hosts/cli",
     "hosts/cli_auth",
