--- a/samples/python/agents/autogen/requirements.txt
+++ b/samples/python/agents/autogen/requirements.txt
@@ -1,4 +1,3 @@
-# Core dependencies
 autogen-agentchat>=0.2.0
 openai>=1.0.0
 httpx>=0.24.0
@@ -6,18 +5,7 @@ python-dotenv>=1.0.0
 click>=8.0.0
 pydantic>=2.0.0
 
-# Server and messaging
+a2a-sdk>=0.1.0
+
 fastapi>=0.100.0
 uvicorn>=0.23.0
-websockets>=11.0.0
-
-# Utilities
-asyncio-mqtt>=0.13.0
-cryptography>=41.0.0
-pyjwt>=2.8.0
-
-# Development dependencies (optional)
-pytest>=7.0.0
-pytest-asyncio>=0.21.0
-black>=23.0.0
-flake8>=6.0.0
